[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jfrog-mcp"
version = "0.1.0"
description = "Read-only Model Context Protocol server for JFrog Artifactory repository intelligence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "JFrog MCP maintainers" }
]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.27,<2",
  "python-dotenv>=1,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1"
]

[project.scripts]
jfrog-mcp = "jfrog_mcp.app.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
